# dispatch

./: .env  CHANGELOG.md  LICENSE  README.md  pyproject.toml
src/dispatch/: __init__.py
src/dispatch/api/: main.py
src/dispatch/core/: config.py  http.py  logging.py
src/dispatch/db/: __init__.py  models.py  repository.py  session.py
src/dispatch/scraping/: base.py  service.py
src/dispatch/scraping/sites/: complexshop.py  goat.py  universalstore.py
src/dispatch/security/: auth.py  rate_limiter.py
src/dispatch/telemetry/: events.py
