[project]
name = "dispatch"
version = "0.2.0"
description = "Dispatch scraping API"
authors = [{ name = "Dispatch" }]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111.0,<0.112.0",
    "uvicorn[standard]>=0.29.0,<0.30.0",
    "httpx>=0.27.0,<0.28.0",
    "beautifulsoup4>=4.12.0,<5.0.0",
    "pydantic>=2.7.0,<3.0.0",
    "pydantic-settings>=2.2.1,<3.0.0",
    "sqlalchemy>=2.0.29,<3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
